--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,8 +2,20 @@ site_name: AI Racer Workshops
 theme:
   name: material
   palette:
-    primary: red
-    accent: orange
+    # Light mode
+    - scheme: default
+      primary: red
+      accent: deep orange
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+    # Dark mode
+    - scheme: slate
+      primary: red
+      accent: deep orange
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
   features:
     - navigation.sections
     - toc.integrate
